--- a/index.qmd
+++ b/index.qmd
@@ -5,5 +5,5 @@ title: "embedded-survey-test"
 This is a Quarto website.
 
 ```{=html}
-<script>(function(i,s,o,g,r,a,m){i['QP']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//scripts.poll-maker.com/3012/pollembed.js','qp');</script><a href='https://take.quiz-maker.com/poll4885858xA8C04771-151' data-poll='4885858xA8C04771-151' style='width:100%; display:block; text-align:right;'>QuizMaker</a>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScno0W8UV-zxuh1g6UdmMdvSlzMOb50OwnGTW1cqGnnnW8_rQ/viewform?embedded=true" width="640" height="466" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 ```
